[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_examples"
path = "src/lib.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
#dev-graph = ["zcash_halo2_proofs/dev-graph", "plotters"]

[patch."https://github.com/zcash/halo2.git"]
zcash_halo2_proofs = { git = "https://github.com/Analyzable-Halo2/zcash-halo2.git", package = "halo2_proofs" }
[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", package = "halo2_proofs"}

plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
